# inochi

./: .dockerignore  .gitignore  Caddyfile  Dockerfile  README.md  compose.yml  entrypoint.sh
.github/workflows/: release.yml
app/: biome.json  next.config.ts  package.json
app/scripts/: generate-inochi-assets.sh  generate-inochi-candle.sh  generate-inochi-media.sh  generate-inochi-wordmark.sh  update-inochi-burn.py
app/src/app/: globals.css  home-content.tsx  layout.tsx  page.tsx  providers.tsx  robots.ts  sitemap.ts
app/src/app/about/: page.tsx  rotator.tsx
app/src/app/auth/signin/: page.tsx
app/src/app/auth/signup/: page.tsx
app/src/app/post/[id]/: page.tsx  post-thread.tsx
app/src/app/search/: page.tsx  search-content.tsx
app/src/app/settings/: page.tsx
app/src/components/: auth-form.tsx  emoji-picker-button.tsx  image-edit-grid.tsx  image-gallery.tsx  inochi-wordmark.tsx  link-preview-card.tsx  nav-bar.tsx  post-card.tsx  post-content.tsx  post-editor.tsx  post-feed.tsx  post-list-skeleton.tsx  post-pagination.tsx  seed-emojis.tsx
app/src/components/ui/: card.tsx
app/src/lib/: api.ts  auth-context.tsx  font-preload.ts  format-time.ts  home-reset.ts  image-loader.ts  origin.ts  post-media.ts  scroll.ts  site.ts  ssr.ts  tz.tsx  use-image-reveal.ts  use-title.ts  utils.ts
core/: Cargo.toml
core/src/: auth.rs  db.rs  main.rs  models.rs
core/src/handlers/: auth.rs  emojis.rs  link_preview.rs  mod.rs  posts.rs  search.rs  tags.rs  users.rs
