[package]
name = "inochi-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.9", features = ["multipart"] }
tokio = { version = "1.52", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
rusqlite = { version = "0.40.1", features = ["bundled"] }
hmac = "0.12.1"
sha2 = "0.10.9"
base64 = "0.22.1"
bcrypt = "0.19.2"
uuid = { version = "1.23.3", features = ["v4"] }
chrono = { version = "0.4.45", features = ["serde"] }
tower-http = { version = "0.7.0", features = ["cors", "fs", "set-header"] }
tower = "0.5.3"
reqwest = { version = "0.13.4", features = ["json", "query"] }
scraper = "0.27.0"
regex = "1.12.4"
imagesize = "0.14.0"
